--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: 92%;
     padding: 20px 50px;
     background-color: #8aa86a;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -11,7 +11,7 @@
 
 .header-container h1 {
     font-size: 28px;
-    color: #f7f2f2;
+    color: #E7A339;
     margin: 0;
 }
 
