--- a/src/PictureList.scss
+++ b/src/PictureList.scss
@@ -1,3 +1,14 @@
+.sliders {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
 .picturelist {
     display: flex;
     flex-direction: row;
