--- a/src/PictureMain.scss
+++ b/src/PictureMain.scss
@@ -1,24 +1,67 @@
-
-
 .picturemain {
-    background-color: lightgrey;
+    position: relative;
+    overflow: hidden;
     margin: 1rem;
     border-radius: 0.5rem;
     width: var(--barWidthstyle);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+    cursor: pointer;
+  
     img {
-        width: 100%;
-        border-radius: 0.5rem 0.5rem 0rem 0rem;
+      width: 100%;
+      border-radius: 0.5rem 0.5rem 0rem 0rem;
+      transition: transform 0.3s ease-in-out;
     }
-
+  
+    &:hover img {
+      transform: scale(1.1);
+    }
+  
+    .info-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+  
+      p {
+        margin: 0;
+      }
+    }
+  
+    &:hover .info-overlay {
+      opacity: 1;
+    }
+  
     .picturemain-link {
-       text-align: left;
-       margin: 1rem 1rem;
+      text-align: left;
+      margin: 1rem 1rem;
+      position: absolute;
+      bottom: 0;
+      left: 1rem;
+      background-color: #2980b9;
+      padding: 0.5rem;
+      display: none;
+      font-size: 16px;
+      color: rgb(222, 221, 221);
+      border: none;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
     }
-
-
-}
+  
+    &:hover .picturemain-link {
+      display: block;
+      background-color: #4d5359;
+    }
+  }
+  .picturemain-link:hover {
+    text-decoration: underline;
+  }
