--- a/src/PictureMain.scss
+++ b/src/PictureMain.scss
@@ -11,7 +11,7 @@
     justify-content: flex-start;
 
     img {
-        width: var(--barWidthstyle);
+        width: 100%;
         border-radius: 0.5rem 0.5rem 0rem 0rem;
     }
 
