--- a/src/PictureMain.scss
+++ b/src/PictureMain.scss
@@ -4,6 +4,7 @@
     margin: 1rem;
     border-radius: 0.5rem;
     width: var(--barWidthstyle);
+    height: var(--barHeighthstyle);
     cursor: pointer;
   
     img {
